dodanie znaczników html, head, body

--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -1,5 +1,8 @@
+<html>
+<head>
+</head>
 
-
+<body>
 <h1>Szkolenie JavaScript</h1>
 
 <h2>Podstawy informatyki</h2>
@@ -14,3 +17,5 @@
 	<li>składnia</li>
 	<li>kodowanie</li>
 </ul>
+</body>
+</html>
