--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -27,5 +27,9 @@
 <img src="owoce/jablko.png">
 <img src="owoce/wisnie.png">
 
+<h3>odsyłacze</h3>
+
+<a href="https://alx.pl/">Strona ALX.PL</a>
+
 </body>
 </html>
