--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -29,7 +29,12 @@
 
 <h3>odsyłacze</h3>
 
-<a href="https://alx.pl/">Strona ALX.PL</a>
+<ul>
+	<li><a href="https://alx.pl/">Strona ALX.PL</a></li>
+	<li><a href="https://www.alx.pl/szkolenia/git-intro/">Szkolenie GIT w ALX</a></li>
+	<li><a href="https://wp.pl/">Strona WP.PL</a></li>
+	<li><a href="https://onet.pl/">Strona ONET.PL</a></li>
+</ul>
 
 </body>
 </html>
