odsyłacz do drugiego pliku

--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -34,6 +34,7 @@
 	<li><a href="https://www.alx.pl/szkolenia/git-intro/">Szkolenie GIT w ALX</a></li>
 	<li><a href="https://wp.pl/">Strona WP.PL</a></li>
 	<li><a href="https://onet.pl/">Strona ONET.PL</a></li>
+	<li><a href="nauka2.html">Ciąg dalszy</a></li>
 </ol>
 
 </body>
