--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -35,6 +35,7 @@
 	<li><a href="https://wp.pl/">Strona WP.PL</a></li>
 	<li><a href="https://onet.pl/">Strona ONET.PL</a></li>
 	<li><a href="nauka2.html">Ciąg dalszy</a></li>
+	<li><a href="www.pw.edu.pl">Politechnika Warszawska</a></li>
 </ol>
 
 </body>
