link do obrazka

--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -38,6 +38,7 @@
 	<li><a href="nauka2.html">Ciąg dalszy</a></li>
 	<li><a href="www.pw.edu.pl">Politechnika Warszawska</a> (odsyłacz nie zadziała, bo prowadzi do pliku o nazwie www.pw.edu.pl, a nie do serwera)</li>
 	<li><a href="https://www.pw.edu.pl">Politechnika Warszawska</a> (ten jest ok)</li>
+	<li><a href="owoce/jablko.png">jabłko</a></li>
 </ol>
 
 </body>
