miniaturka jako link

--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -25,7 +25,8 @@
 <h3>obrazki</h3>
 
 <img src="wirusy.jpg">
-<img src="owoce/jablko.png">
+
+<a href="owoce/jablko.png"><img src="owoce/jablko-mini.png"></a>
 <img src="owoce/wisnie.png">
 
 <h3>odsyłacze</h3>
