bazgroly1 - porównanie JPG i PNG

--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -29,6 +29,12 @@
 <a href="owoce/jablko.png"><img src="owoce/jablko-mini.png"></a>
 <img src="owoce/wisnie.png">
 
+<h3>porównanie kompresji PNG i JPEG</h3>
+<h4>bazgroly1</h4>
+<img src="bazgroly1.jpg">
+<img src="bazgroly1.png">
+
+
 <h3>odsyłacze</h3>
 
 <ol>
@@ -41,6 +47,8 @@
 	<li><a href="https://www.pw.edu.pl">Politechnika Warszawska</a> (ten jest ok)</li>
 	<li><a href="owoce/jablko.png">jabłko</a></li>
 </ol>
+
+
 
 </body>
 </html>
