--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -34,6 +34,11 @@
 <img src="bazgroly1.jpg">
 <img src="bazgroly1.png">
 
+<h4>bazgroly2</h4>
+<img src="bazgroly2.jpg">
+<img src="bazgroly2.png">
+
+
 
 <h3>odsyłacze</h3>
 
