--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -38,7 +38,8 @@
 <img src="bazgroly2.jpg">
 <img src="bazgroly2.png">
 
-
+<h4>programista ze stocku</h4>
+<img src="danial-igdery-FCHlYvR5gJI-unsplash.jpg">
 
 <h3>odsyłacze</h3>
 
