--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -41,6 +41,9 @@
 <h4>programista ze stocku</h4>
 <img src="danial-igdery-FCHlYvR5gJI-unsplash.jpg">
 
+<h4>przezroczystość</h4>
+<img src="litera-m.png">
+
 <h3>odsyłacze</h3>
 
 <ol>
