--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -57,6 +57,25 @@
 	<li><a href="owoce/jablko.png">jabłko</a></li>
 </ol>
 
+<h3>tabelki</h3>
+
+<table border="1">
+	<tr>
+		<td>Jan</td>
+		<td>Kowalski</td>
+		<td>1970</td>
+	</tr>
+	<tr>
+		<td>Jan</td>
+		<td>Nowak</td>
+		<td>1972</td>
+	</tr>
+	<tr>
+		<td>Jan</td>
+		<td>Wiśniewski</td>
+		<td>1975</td>
+	</tr>
+</table>
 
 
 </body>
