--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -61,6 +61,12 @@
 
 <table border="1">
 	<tr>
+		<th>imię</th>
+		<th>nazwisko</th>
+		<th>rocznik</th>
+	</tr>
+
+	<tr>
 		<td>Jan</td>
 		<td>Kowalski</td>
 		<td>1970</td>
