--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -61,26 +61,42 @@
 
 <table border="1">
 	<tr>
+		<th>firma</th>
 		<th>imię</th>
 		<th>nazwisko</th>
 		<th>rocznik</th>
+		<th colspan="2">adres</th>
 	</tr>
 
 	<tr>
+		<td rowspan="3">ABCD Consulting</td>
 		<td>Jan</td>
 		<td>Kowalski</td>
 		<td>1970</td>
+		<td>ul. Rumiankowa 7</td>
+		<td>01-234 Warszawa</td>
 	</tr>
 	<tr>
 		<td>Jan</td>
 		<td>Nowak</td>
 		<td>1972</td>
+		<td>ul. Rumiankowa 17</td>
+		<td>01-234 Warszawa</td>
 	</tr>
 	<tr>
 		<td>Jan</td>
 		<td>Wiśniewski</td>
 		<td>1975</td>
+		<td colspan="2">brak</td>
 	</tr>
+	<tr>
+		<td>XYZ Solutions</td>
+		<td>Jan</td>
+		<td>Zieliński</td>
+		<td>1978</td>
+		<td colspan="2">brak</td>
+	</tr>
+
 </table>
 
 
