--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -96,9 +96,47 @@
 		<td>1978</td>
 		<td colspan="2">brak</td>
 	</tr>
-
 </table>
 
+<h3>formatowanie tekstu</h3>
+<p>
+	PZL P.11 stanowił wzmocnione i         ulepszone rozwinięcie modelu P.7, z
+	mocniejszym silnikiem i innymi zmianami. Inżynier Puławski zajął się
+	w pierwszym rzędzie samolotami z silnikiem rzędowym i mógł przed swoją
+	śmiercią w wypadku lotniczym 21 marca 1931 roku jedynie rozpocząć prace
+	nad projektem P.11, które kontynuował następnie jego współpracownik, inż.
+	Wsiewołod Jakimiuk[8]. Obliczenia aerodynamiczne i wytrzymałościowe dla
+	samolotu PZL P.11 wykonał natomiast inż.
+	
+	
+	
+	Piotr Bielkowicz[11]. W toku
+	rozwoju powstało pięć prototypów z różnymi silnikami, kilkakrotnie
+	przerabianych[a]. Pierwszy prototyp (P.11/I) został oblatany w
+	
+
+
+	sierpniu 1931 roku przez Bolesława Orlińskiego (bliższa data nieznana)[11].
+	Otrzymał on francuski silnik Gnome-Rhône Jupiter VII 9Asb o mocy maksymalnej
+	480 KM[b]. Był podobny do P.6, od którego różnił się przede wszystkim ulepszonym
+	skrzydłem, pozbawionym wystających grzebieni na górnej powierzchni na skutek
+	zmiany technologii nitowania, natomiast kadłub i usterzenie były zasadniczo
+	takie same[c]. Podobieństwo do P.6 powodował też nieosłonięty silnik rodziny
+	Jupiter, jedynie z owiewkami cylindrów, a później z bardzo wąskim pierścieniem
+	Townenda, obejmującym tylko cylindry[9]. Prototyp ten prezentowany był od 24
+	listopada 1931 roku w Rumunii, a następnie w Turcji, gdzie wziął udział w
+	konkursie samolotów myśliwskich w Stambule, okazując się lepszy od innych
+	współczesnych konstrukcji[7][d]. W dniach 4, 8 i 14 listopada 1931 roku
+	prowadzono w Warszawie próby statyczne elementów płatowca P.11, z udziałem
+	delegacji rumuńskiej, z bardzo dobrymi wynikami[7][e]. W kwietniu 1932 roku
+	natomiast loty zapoznawcze na P.11/I odbywali w Warszawie piloci portugalscy[12].
+</p>
+<p>
+	Drugi prototyp (P.11/II), ze zmodyfikowanym kadłubem i kształtem usterzenia, wyposażony w brytyjski silnik Bristol Mercury IVA o mocy 517 KM, ukończony został w listopadzie 1931 roku[9][13]. Początkowo prototyp ten borykał się z problemem wibracji silnika, wyeliminowanym przez zmianę silnika na inny oraz zmiany śmigła[14]. Oblatany został przez Bolesława Orlińskiego prawdopodobnie dopiero w grudniu 1931 roku[g]. W styczniu otrzymał uzbrojenie w postaci dwóch km-ów Vickers kalibru 7,92 mm w kadłubie, z celownikiem lunetkowym w wiatrochronie[11][12]. W trakcie prób dodano szeroki pierścień Townenda na silniku[h], długą owiewkę za głową pilota (następnie skróconą), a także owiewki kół[13]. Początkowo testowano śmigło metalowe Ratier o zmiennym skoku, następnie drewniane Chauvière; ostatecznie w celu usunięcia problemu wibracji zastosowano drewniane śmigło Bristol[12]. 19 czerwca 1932 roku po raz pierwszy zademonstrowano publicznie samolot podczas mityngu lotniczego na Polu Mokotowskim[14]. W końcu lipca 1932 roku por. pil. Jerzy Bajan zajął nim drugie miejsce w wyścigu myśliwców podczas III Międzynarodowego Mityngu Lotniczego w Zurychu, osiągając prędkość 310 km/h i pokonując większość konstrukcji zachodnich; samolot nosił wówczas znaki 6-A[15][i]. Po mityngu i wymianie kół na inne, 23 sierpnia 1932 roku P.11/II przeleciał do Portugalii i był tam demonstrowany przez około rok, lecz ostatecznie latem 1933 roku wrócił do Polski, gdzie był używany do szkolenia w CWTL w Bydgoszczy[f]. 23 czerwca 1936 roku został rozbity przy lądowaniu na Lotnisku Mokotowskim[12]. 
+</p>
+<p>
+	Trzeci prototyp (P.11/III) został oblatany w czerwcu 1932 roku[15]. Miał on silnik Bristol Mercury IVA, o mocy podawanej jako 555 KM, osłonięty dosyć wąskim pierścieniem Townenda[15][j]. 22 sierpnia 1932 roku został przetransportowany statkiem „Pułaski” do USA w celu wzięcia udziału w wyścigach National Air Races w Cleveland[16]. Pilotowany przez płk. pil. Jerzego Kossowskiego, ze znakami 6-D, wziął udział 2 września w wyścigu na wysokość 1 mili, lecz mimo rozwinięcia największej prędkości, zawodów nie wygrał, gdyż z powodu nieporozumienia okrążył nieprzepisowo maszt na mecie[16][17][18]. Po powrocie do Polski jesienią samolot został zmodyfikowany jako wzorzec wersji seryjnej P.11a; otrzymał szerszy pierścień Townenda na silniku z kolektorem spalin w przedniej krawędzi i uzbrojenie z dwóch km-ów, z celownikiem lunetkowym[15]. Służył następnie w 1935 roku w CWOL do treningu instruktorów[19]. Czwarty prototyp P.11/IV powstał dla zamontowania nowego francuskiego silnika Gnome-Rhône K9 Mistral o mocy do 550 KM, dostarczonego w celach reklamowych przez wytwórnię[k]. Zbudowano go w oparciu o płatowiec z I serii myśliwców P.7a[20]. Między 18 listopada a 4 grudnia 1932 roku został on zaprezentowany na XIII Salonie Lotniczym w Paryżu, wyposażony w trójłopatowe śmigło Gnome-Rhône[20]. Stał się on przedprototypem wersji P.11b dla Rumunii[20]. 
+</p>
 
 </body>
 </html>
