--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -100,19 +100,19 @@
 
 <h3>formatowanie tekstu</h3>
 <p>
-	PZL P.11 stanowił wzmocnione i         ulepszone rozwinięcie modelu P.7, z
-	mocniejszym silnikiem i innymi zmianami. Inżynier Puławski zajął się
-	w pierwszym rzędzie samolotami z silnikiem rzędowym i mógł przed swoją
+	<i>PZL P.11</i> stanowił wzmocnione i         ulepszone rozwinięcie modelu P.7, z
+	mocniejszym silnikiem i innymi zmianami. <b>Inżynier Puławski zajął się
+	w pierwszym rzędzie <i>samolotami z silnikiem rzędowym</i> i mógł przed swoją
 	śmiercią w wypadku lotniczym 21 marca 1931 roku jedynie rozpocząć prace
 	nad projektem P.11, które kontynuował następnie jego współpracownik, inż.
-	Wsiewołod Jakimiuk[8]. Obliczenia aerodynamiczne i wytrzymałościowe dla
+	Wsiewołod Jakimiuk[8].</b> Obliczenia aerodynamiczne i wytrzymałościowe dla
 	samolotu PZL P.11 wykonał natomiast inż.
 	
 	
 	
-	Piotr Bielkowicz[11]. W toku
+	Piotr Bielkowicz[11]. <u>W toku
 	rozwoju powstało pięć prototypów z różnymi silnikami, kilkakrotnie
-	przerabianych[a]. Pierwszy prototyp (P.11/I) został oblatany w
+	przerabianych[a].</u> Pierwszy prototyp (P.11/I) został oblatany w
 	
 
 
