formatowanie strong, em

--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -123,10 +123,10 @@
 	zmiany technologii nitowania, natomiast kadłub i usterzenie były zasadniczo
 	takie same[c]. Podobieństwo do P.6 powodował też nieosłonięty silnik rodziny
 	Jupiter, jedynie z owiewkami cylindrów, a później z bardzo wąskim pierścieniem
-	Townenda, obejmującym tylko cylindry[9]. Prototyp ten prezentowany był od 24
+	Townenda, obejmującym tylko cylindry[9]. <strong>Prototyp</strong> ten prezentowany był od 24
 	listopada 1931 roku w Rumunii, a następnie w Turcji, gdzie wziął udział w
 	konkursie samolotów myśliwskich w Stambule, okazując się lepszy od innych
-	współczesnych konstrukcji[7][d]. W dniach 4, 8 i 14 listopada 1931 roku
+	współczesnych konstrukcji[7][d]. W dniach 4, 8 i 14 <em>listopada</em> 1931 roku
 	prowadzono w Warszawie próby statyczne elementów płatowca P.11, z udziałem
 	delegacji rumuńskiej, z bardzo dobrymi wynikami[7][e]. W kwietniu 1932 roku
 	natomiast loty zapoznawcze na P.11/I odbywali w Warszawie piloci portugalscy[12].
