--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -177,6 +177,15 @@
 			Bla bla bla
 			Bla bla bla
 		</section>
+		<section>
+			<dl>
+				<dt>HTML</dt>
+				<dd>język znaczników służący do tworzenia stron internetowych i aplikacji webowych</dd>
+				<dt>JavaScript</dt>
+				<dd>język programowania służący m.in. do ożywiania stron internetowych</dd>
+
+			</dl>
+		</section>
 	</article>
 	<aside>
 		Zobacz też:
