atrybut title, atrybut alt, znacznik abbr

--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -16,15 +16,15 @@
 <h2>Nauka HTML-a</h2>
 
 <ul>
-	<li>znaczniki</li>
+	<li title="tagi">znaczniki</li>
 	<li>składnia</li>
 	<li>kodowanie</li>
 	<li>atrybuty</li>
 </ul>
 
-<h3>obrazki</h3>
+<h3 title="galeria obrazów">obrazki</h3>
 
-<img src="wirusy.jpg">
+<img src="wirusy.jpg" title="koronawirusy">
 
 <a href="owoce/jablko.png"><img src="owoce/jablko-mini.png"></a>
 <img src="owoce/wisnie.png">
@@ -35,14 +35,15 @@
 <img src="bazgroly1.png">
 
 <h4>bazgroly2</h4>
-<img src="bazgroly2.jpg">
-<img src="bazgroly2.png">
+<img src="bazgroly2.jpg" alt="HEJ">
+<img src="bazgroly2.png" alt="HEJ">
 
 <h4>programista ze stocku</h4>
 <img src="danial-igdery-FCHlYvR5gJI-unsplash.jpg">
 
 <h4>przezroczystość</h4>
 <img src="litera-m.png">
+<img src="litera-x.png" alt="X">
 
 <h3>odsyłacze</h3>
 
@@ -179,11 +180,10 @@
 		</section>
 		<section>
 			<dl>
-				<dt>HTML</dt>
+				<dt><abbr title="HyperText Markup Language">HTML</abbr></dt>
 				<dd>język znaczników służący do tworzenia stron internetowych i aplikacji webowych</dd>
 				<dt>JavaScript</dt>
 				<dd>język programowania służący m.in. do ożywiania stron internetowych</dd>
-
 			</dl>
 		</section>
 	</article>
