--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -198,5 +198,34 @@
 	</aside>
 </main>
 
+<h3>tekst preformatowany</h3>
+
+<ul>
+	<li>Font o stałej szerokości znaku</li>
+	<li>Zachowanie spacji i przejść do nowej linii</li>
+	<li>Znacznik: &lt;pre&gt; </li>
+</ul>
+
+<pre>
+	+=============================+
+	| RAMKA                       |
+	+=============================+
+	| :::::::                     |
+	| ::   ::                     |
+	| ::    ::                    |
+	| ::     ::                   |
+	| ::      ::                  |
+	| ::       ::::::::           |
+	+=============================+
+</pre>
+
+<h3>encje w HTML-u</h3>
+
+<p>x jest mniejsze niż y: x &lt; y (encja lt - less than)</p>
+<p>x jest większe niż y: x &gt; y (encja gt - greater than)</p>
+<p>Tom &amp; Jerry</p>
+
+<p>Aby wyświetlić znacznik: &amp; należy napisać w kodzie: &amp;amp;</p>
+
 </body>
 </html>
