--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -121,15 +121,14 @@
 	sierpniu 1931 roku przez Bolesława Orlińskiego (bliższa data nieznana)[11].
 	Otrzymał on francuski silnik Gnome-Rhône Jupiter VII 9Asb o mocy maksymalnej
 	480 KM[b]. Był podobny do P.6, od którego różnił się przede wszystkim ulepszonym
-	skrzydłem, pozbawionym wystających grzebieni na górnej powierzchni na skutek
+	skrzydłem, pozbawionym 601&nbsp;234&nbsp;567 wystających grzebieni na górnej powierzchni na skutek
 	zmiany technologii nitowania, natomiast kadłub i usterzenie były zasadniczo
 	takie same[c]. Podobieństwo do P.6 powodował też nieosłonięty silnik rodziny
 	Jupiter, jedynie z owiewkami cylindrów, a później z bardzo wąskim pierścieniem
 	Townenda, obejmującym tylko cylindry[9]. <strong>Prototyp</strong> ten prezentowany był od 24
-	listopada 1931 roku w Rumunii, a następnie w Turcji, gdzie wziął udział w
-	konkursie samolotów myśliwskich w Stambule, okazując się lepszy od innych
+	listopada 1931 roku w Rumunii, a następnie w Turcji, gdzie wziął udział w&nbsp;konkursie samolotów myśliwskich w Stambule, okazując się lepszy od innych
 	współczesnych konstrukcji[7][d]. W dniach 4, 8 i 14 <em>listopada</em> 1931 roku
-	prowadzono w Warszawie próby statyczne elementów płatowca P.11, z udziałem
+	prowadzono w Warszawie próby statyczne elementów płatowca P.11, z&nbsp;udziałem
 	delegacji rumuńskiej, z bardzo dobrymi wynikami[7][e]. W kwietniu 1932 roku
 	natomiast loty zapoznawcze na P.11/I odbywali w Warszawie piloci portugalscy[12].
 </p>
@@ -224,6 +223,13 @@
 <p>x jest mniejsze niż y: x &lt; y (encja lt - less than)</p>
 <p>x jest większe niż y: x &gt; y (encja gt - greater than)</p>
 <p>Tom &amp; Jerry</p>
+
+<p>Serce: 
+	♥
+    &#9829;
+    &#x2665;
+    &heartsuit;
+</p>
 
 <p>Aby wyświetlić znacznik: &amp; należy napisać w kodzie: &amp;amp;</p>
 
