--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -22,9 +22,9 @@
 	<li>atrybuty</li>
 </ul>
 
-<h3 title="galeria obrazów">obrazki</h3>
+<h3 title='galeria "obrazów"'>obrazki</h3>
 
-<img src="wirusy.jpg" title="koronawirusy">
+<img src="wirusy.jpg" title="ikonki z kolekcji &quot;Koronawirusy&quot;">
 
 <a href="owoce/jablko.png"><img src="owoce/jablko-mini.png"></a>
 <img src="owoce/wisnie.png">
@@ -51,12 +51,14 @@
 <ol>
 	<li><a href="https://alx.pl/">Strona ALX.PL</a></li>
 	<li><a href="https://www.alx.pl/szkolenia/git-intro/">Szkolenie GIT w ALX</a></li>
-	<li><a href="https://wp.pl/">Strona WP.PL</a></li>
+	<li><a href='https://wp.pl/'>Strona WP.PL</a></li>
 	<li><a href="https://onet.pl/">Strona ONET.PL</a></li>
 	<li><a href="nauka2.html">Ciąg dalszy</a></li>
 	<li><a href="www.pw.edu.pl">Politechnika Warszawska</a> (odsyłacz nie zadziała, bo prowadzi do pliku o nazwie www.pw.edu.pl, a nie do serwera)</li>
 	<li><a href="https://www.pw.edu.pl">Politechnika Warszawska</a> (ten jest ok)</li>
 	<li><a href="owoce/jablko.png">jabłko</a></li>
+	<li><a href="https://www.youtube.com/watch?v=2YTOW3vCNzA&list=RDCMUCAqSqPZqI3FAlWihgYHCyXw&start_radio=1&t=0">Jakieś filmiki na YT</a></li>
+	<li><a href="https://www.youtube.com/watch?v=2YTOW3vCNzA&amp;list=RDCMUCAqSqPZqI3FAlWihgYHCyXw&amp;start_radio=1&amp;t=0">Jakieś filmiki na YT</a></li>
 </ol>
 
 <h3>tabelki</h3>
@@ -94,7 +96,7 @@
 	<tr>
 		<td>XYZ Solutions</td>
 		<td>Jan</td>
-		<td>Zieliński</td>
+		<td title='O&apos;Connor'>Zieliński</td>
 		<td>1978</td>
 		<td colspan="2">brak</td>
 	</tr>
@@ -223,6 +225,7 @@
 <p>x jest mniejsze niż y: x &lt; y (encja lt - less than)</p>
 <p>x jest większe niż y: x &gt; y (encja gt - greater than)</p>
 <p>Tom &amp; Jerry</p>
+<p>O&apos;Connor</p>
 
 <p>Serce: 
 	♥
@@ -232,6 +235,14 @@
 </p>
 
 <p>Aby wyświetlić znacznik: &amp; należy napisać w kodzie: &amp;amp;</p>
+
+<p>Moja ulubiona książka to "W pustyni i w puszczy".</p>
+<p>Moja ulubiona książka to &ldquo;W pustyni i w puszczy&rdquo;.</p>
+<p>Moja ulubiona książka to &bdquo;W pustyni i w puszczy&rdquo;.</p>
+<p>Moja ulubiona książka to „W pustyni i w puszczy”.</p>
+<p>&copy; Copyright 2021 ALX</p>
+<p>Na dworze jest 10&deg;C (10°C)</p>
+<p>4&plusmn;5</p>
 
 </body>
 </html>
