--- a/dzien01/nauka1.html
+++ b/dzien01/nauka1.html
@@ -6,12 +6,21 @@
 </head>
 
 <body>
+
+<nav>
+	<ul>
+		<li><a href="#obrazki">obrazki</a></li>
+		<li><a href="#linki">odsyłacze</a></li>
+		<li><a href="#tab">tabelki</a></li>
+		<li><a href="#format">formatowanie</a></li>
+	</ul>
+</nav>
+
 <h1>Kurs JavaScript</h1>
 
 <h2>Podstawy informatyki</h2>
 <h3>Bit i bajt</h3>
 <p>1 bit to cyfra binarny, czyli 0 albo 1</p>
-
 
 <h2>Nauka HTML-a</h2>
 
@@ -22,7 +31,7 @@
 	<li>atrybuty</li>
 </ul>
 
-<h3 title='galeria "obrazów"'>obrazki</h3>
+<h3 id='obrazki' title='galeria "obrazów"'>obrazki</h3>
 
 <img src="wirusy.jpg" title="ikonki z kolekcji &quot;Koronawirusy&quot;">
 
@@ -46,7 +55,7 @@
 <img src="litera-m.png">
 <img src="litera-x.png" alt="X">
 
-<h3>odsyłacze</h3>
+<h3 id='linki'>odsyłacze</h3>
 
 <ol>
 	<li><a href="https://alx.pl/">Strona ALX.PL</a></li>
@@ -59,9 +68,10 @@
 	<li><a href="owoce/jablko.png">jabłko</a></li>
 	<li><a href="https://www.youtube.com/watch?v=2YTOW3vCNzA&list=RDCMUCAqSqPZqI3FAlWihgYHCyXw&start_radio=1&t=0">Jakieś filmiki na YT</a></li>
 	<li><a href="https://www.youtube.com/watch?v=2YTOW3vCNzA&amp;list=RDCMUCAqSqPZqI3FAlWihgYHCyXw&amp;start_radio=1&amp;t=0">Jakieś filmiki na YT</a></li>
+	<li><a href="https://pl.wikipedia.org/wiki/Antony_Hopkins#Opery">Opery A.H.</a></li>
 </ol>
 
-<h3>tabelki</h3>
+<h3 id="tab">tabelki</h3>
 
 <table border="1">
 	<tr>
@@ -102,7 +112,7 @@
 	</tr>
 </table>
 
-<h3>formatowanie tekstu</h3>
+<h3 id="format">formatowanie tekstu</h3>
 <p>
 	<i>PZL P.11</i> stanowił wzmocnione i         ulepszone rozwinięcie modelu P.7, z
 	mocniejszym silnikiem i innymi zmianami. <b>Inżynier Puławski zajął się
