formularze ciąg dalszy

--- a/dzien01/formularze.html
+++ b/dzien01/formularze.html
@@ -19,6 +19,14 @@
             <option value="he">hebrajski</option>
           </select>
         <input type='submit' value="Szukaj w Google">
+
+        <p><input type="radio" name="plec" value="M">Mężczyzna</p>
+        <p><input type="radio" name="plec" value="K">Kobieta</p>
+
+        <p><input type="checkbox" id="horns" name="XXX" value='TAK'>xxx</p>
+        <p><input type="checkbox" id="horns" name="YYY" value='TAK'>yyy</p>
+        <p><input type="checkbox" id="horns" name="ZZZ" value='TAK'>zzz</p>
+        
     </form>
 
 </body>
