labelki do formularzy

--- a/dzien01/formularze.html
+++ b/dzien01/formularze.html
@@ -20,8 +20,16 @@
           </select>
         <input type='submit' value="Szukaj w Google">
 
-        <p><input type="radio" name="plec" value="M">Mężczyzna</p>
-        <p><input type="radio" name="plec" value="K">Kobieta</p>
+        <p>
+            <label title="Facet">
+            <input type="radio" name="plec" value="M" id="plecM"> Mężczyzna
+            </label>
+        </p>
+        <p>
+            <label title="Niewiasta">
+            <input type="radio" name="plec" value="K" id="plecK"> Kobieta
+            </label>
+        </p>
 
         <p><input type="checkbox" id="horns" name="XXX" value='TAK'>xxx</p>
         <p><input type="checkbox" id="horns" name="YYY" value='TAK'>yyy</p>
