dopisanie labelki do formularza

--- a/dzien01/formularze.html
+++ b/dzien01/formularze.html
@@ -9,6 +9,8 @@
     <h2>Formularz do wyszukiwarki Google</h2>
     <form method='GET' action="https://www.google.com/search">
         Szukaj w Google: <input name='q'>
+        
+        <label>
         Język:
         <select name="hl">
             <option value="pl">polski</option>
@@ -18,6 +20,8 @@
             <option value="fr" selected>francuski</option>
             <option value="he">hebrajski</option>
           </select>
+        </label>
+        
         <input type='submit' value="Szukaj w Google">
 
         <p>
