--- a/dzien02/dokument1.html
+++ b/dzien02/dokument1.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 { color: green; }
+    </style>
 </head>
 <body>
-    <h1></h1>
+    <h1>Firma XYZ</h1>
 
     <section>
         <header>Pracownicy</header>
