--- a/dzien02/dokument1.html
+++ b/dzien02/dokument1.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1 { color: green; }
+        body { font-family: Georgia, serif; color: red; }
+        h1 { color: green; font-family: PokemonFont2, Tahoma, Arial, sans-serif; font-size: 50pt; }
+        th { color: rgb(40, 81, 156); }
+        td { color: #16c442; }
+
     </style>
 </head>
 <body>
