--- a/dzien02/dokument1.html
+++ b/dzien02/dokument1.html
@@ -5,23 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            font-family: Georgia, serif;
-            color: red;
-        }
-        h1 {
-            color: green;
-            font-family: PokemonFont2, Tahoma, Arial, sans-serif;
-            font-size: 50pt;
-        }
-        th {
-            color: rgb(40, 81, 156);
-        }
-        td {
-            color: #16c442;
-        }
-    </style>
+    <link rel='stylesheet' href='moj_styl.css' type='text/css'>
 </head>
 <body>
     <h1>Firma XYZ</h1>
