import fontów z Google

--- a/dzien02/dokument1.html
+++ b/dzien02/dokument1.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel='stylesheet' href='moj_styl.css' type='text/css'>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&amp;display=swap" rel="stylesheet"> 
 </head>
 <body>
 
