doraźne ustawianie stylu przez atrybut style=""

--- a/dzien02/dokument2.html
+++ b/dzien02/dokument2.html
@@ -18,7 +18,7 @@
         <ul>
             <li>poniedziałek</li>
             <li>wtorek</li>
-            <li>środa</li>
+            <li style='color: green; font-family: "Times New Roman";'>środa</li>
             <li>czwartek</li>
             <li>piątek</li>
             <li class='weekend'>sobota</li>
