--- a/dzien02/dokument2.html
+++ b/dzien02/dokument2.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <main>
+        <nav>
+            <ul>
+                <li><a href="https://alx.pl">ALX</a></li>
+                <li><a href="https://github.com">GitHub</a></li>
+                <li><a href="https://github.com/mateusza2">mateusz a</a></li>
+                <li><a href="https://github.com/mateusza2/2021-03-27-alx-javascript">nasz kurs</a></li>
+                <li><a href="https://microsoft.com">Microsoft</a></li>
+            </ul>
+        </nav>
         <h1>Moja firma</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean iaculis maximus est, ut mollis ligula semper blandit. Quisque feugiat felis id dignissim dapibus. Morbi dapibus ligula eu mauris tempor, eget vulputate sapien laoreet. Mauris elementum turpis elit, vel luctus lacus cursus in. Praesent bibendum eu mi at ullamcorper. Ut non ipsum at nibh vulputate imperdiet. Integer vel lorem nisi. Nam placerat scelerisque mi, non fermentum dui mollis non. Etiam vel lobortis sem, non blandit mauris. Nulla pulvinar eros a egestas porta. Praesent mollis, enim eget vulputate vehicula, est tortor fermentum elit, sagittis pellentesque quam magna sed mauris. Morbi volutpat gravida leo et sollicitudin. Aenean in ante massa.</p>
         <p>Phasellus egestas mattis est, in tincidunt nulla vulputate sit amet. Integer tempor, metus et tempor pulvinar, enim est semper elit, eget tincidunt dui lacus ac eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla dignissim mi diam, at congue orci lobortis in. Nulla a porttitor urna. Aenean laoreet posuere arcu, eget finibus tortor posuere a. Vestibulum posuere neque lectus, ac tincidunt lacus blandit ac.</p>
