--- a/dzien02/dokument2.html
+++ b/dzien02/dokument2.html
@@ -35,12 +35,31 @@
             <li class='weekend'>sobota</li>
             <li class='weekend'>niedziela</li>
         </ul>
-        <ol>
+        <ol id='poryroku'>
             <li>wiosna</li>
             <li>lato</li>
             <li>jesień</li>
             <li>zima</li>
         </ol>
+
+        <ul id='swiat'>
+            <li>Europa
+                <ul>
+                    <li data-code="PL" data-population="38000000" data-president="Andrzej Duda">Polska</li>
+                    <li data-code="DE">Niemcy</li>
+                    <li data-code="CZ">Czechy</li>
+                    <li>Białoruś</li>
+                </ul>
+            </li>
+            <li>
+                Azja
+                <ul>
+                    <li>Kambodża</li>
+                    <li>Tajlandia</li>
+                    <li>Malezja</li>
+                </ul>
+            </li>
+        </ul>
     </main>
 </body>
 </html>
