--- a/dzien02/dokument2.html
+++ b/dzien02/dokument2.html
@@ -7,7 +7,7 @@
     <title>Moja Firma</title>
     <link rel='stylesheet' href='firma2.css'>
 </head>
-<body>
+<body class='noc'>
     <main>
         <nav>
             <ul>
