dodatkowe elementy formularza

--- a/dzien02/dokument2.html
+++ b/dzien02/dokument2.html
@@ -60,6 +60,15 @@
                 </ul>
             </li>
         </ul>
+
+        <h3>Forumlarz</h3>
+
+        <label>Komentarz:<br>
+        <textarea cols=40 rows=10></textarea>
+        </label><br>
+
+        <button>Zamów</button>
+
     </main>
 </body>
 </html>
