--- a/dzien03/odmiana.html
+++ b/dzien03/odmiana.html
@@ -5,16 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odmiana rzeczownika</title>
-    <!-- <script src='odmiana.js'></script> -->
+    <script src='odmiana.js'></script>
 </head>
 <body>
     <p>Odmiana rzeczownika "pies"</p>
     
-    <p>Wpisz ilość: <input id='il'></output></p>
+    <p>Wpisz ilość: <input id='il' type="number" step="1" min="0" oninput="validity.valid||(value='');"></output></p>
     <button onclick="odmien()">ODMIEŃ</button>
     <output id='wynik'>???</output>
-
-    <script src='odmiana.js'></script>
 
 </body>
 </html>
