--- a/dzien04/kalendarz.html
+++ b/dzien04/kalendarz.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        td,
-        th {
-            border: 1px solid black;
-        }
+        td, th { border: 1px solid black; }
     </style>
 </head>
-
 <body>
     <h1>Miesiące</h1>
 
@@ -24,7 +19,7 @@
         </tr>
     </table>
 
-    <p>Zadanie: napisać kod Javascript, który automatycznie wypełni tabelkę nazwami i długościami kolejnych miesięcy</p>
+    <p>Zadanie: Przerobić kod JS, aby zamiast <code>.innerHTML</code> korzystał z <code>document.createElement()</code>, <code>document.append()</code> itp</p>
 
     <!--
         Przykład:
@@ -32,21 +27,22 @@
             <tr><td>luty</td><td>28</td></tr>
             ...
     -->
-    
+
     <script>
         miesiace = [
-            "styczeń", "luty", "marzec", "kwiecień",
-            "maj", "czerwiec", "lipiec", "sierpień",
-            "wrzesień", "październik", "listopad", "grudzień"
-        ];
+                    "styczeń", "luty", "marzec", "kwiecień",
+                    "maj", "czerwiec", "lipiec", "sierpień",
+                    "wrzesień", "październik", "listopad", "grudzień"
+                ];
         dlugosci = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31];
 
-                for (var i = 0; i < 12; i++) {
-                document.querySelector('#kalendarz').innerHTML += '<tr><td>' + miesiace[i] + '</td><td>' + dlugosci[i] + '</td></tr>';
-            }
-        
+        for (var i=0; i < 12; i++){
+            document.querySelector('#kalendarz').innerHTML += '<tr><td>' + miesiace[i] + '</td><td>' + dlugosci[i] + '</td></tr>';
+            nowy = document.createElement('div');
+
+        }
+
     </script>
 
 </body>
-
 </html>
