--- a/praca-domowa/oszukanaKostka.html
+++ b/praca-domowa/oszukanaKostka.html
@@ -12,7 +12,7 @@
         }
 
         main {
-            width: 400px;
+            width: 600px;
             margin: auto;
             text-align: center;
         }
@@ -21,7 +21,7 @@
 </head>
 <body>
         <main>
-        <h1>Rzut kostką</h1>
+        <h1>Rzut kostką (podwójne kliknięcie aby wyrzucić szóstkę)</h1>
 
         <button onclick='rzut(0)' ondblclick='rzut(1)'> 
         <output id='wynik' >-</output>
