--- a/praca-domowa/pesel.html
+++ b/praca-domowa/pesel.html
@@ -11,7 +11,7 @@
 <body>
     <p>Podaj PESEL:<input id='pesel' type="number" step="1" min="0" oninput="validity.valid||(value='');"></output>
         <button onclick="sprawdzPesel(document.querySelector('#pesel').value)">SPRAWDŹ PESEL</button>
-    <p>Czy PESEL poprawny: <output id='czyPoprawny'></output></p>
+    <p>PESEL jest: <output id='czyPoprawny'></output></p>
     <p>Data urodzenia:<output id='dataUrodzenia'></output></p>
     <p>Płeć: <output id='plec'></output></p>
 </body>
@@ -20,17 +20,57 @@
         var digits = [];
         digits = ("" + pesel).split("");
         console.log(digits);
-        
+
         //plec
-        if(digits[9] % 2 == 0) {
+        if (digits[9] % 2 == 0) {
             document.querySelector('#plec').textContent = 'Kobieta';
         } else {
             document.querySelector('#plec').textContent = 'Mężczyzna';
         }
 
         //data_urodzenia
+        var peselString = pesel.toString();
+        var rok = parseInt(pesel.substring(0, 2), 10);
+        var miesiac = parseInt(pesel.substring(2, 4), 10);
+        var dzien = parseInt(pesel.substring(4, 6), 10);
 
-        //cygra_kontrolna
+        if (miesiac >= 80) {
+            rok += 1800;
+            miesiac = miesiac - 80;
+        }
+        else if (miesiac >= 60) {
+            rok += 2200;
+            miesiac = miesiac - 60;
+        }
+        else if (miesiac >= 40) {
+            rok += 2100;
+            miesiac = miesiac - 40;
+        }
+        else if (miesiac >= 20) {
+            rok += 2000;
+            miesiac = miesiac - 20;
+        }
+        else {
+            rok += 1900;
+        }
+
+        document.querySelector('#dataUrodzenia').textContent = ` ${rok} - ${miesiac} - ${dzien}`;
+
+        //cyfra_kontrolna
+
+        var wagi = [9, 7, 3, 1, 9, 7, 3, 1, 9, 7];
+        var suma = 0;
+
+        for (var i = 0; i < wagi.length; i++) {
+            suma += (parseInt(pesel.substring(i, i + 1), 10) * wagi[i]);
+        }
+
+        suma = suma % 10;
+
+        var cyfraKontr = parseInt(pesel.substring(10, 11), 10);
+        var poprawnosc = (suma === cyfraKontr);
+
+        document.querySelector('#czyPoprawny').textContent = poprawnosc ? 'POPRAWNY' : 'NIEPOPRAWNY';
     }
 </script>
 
